feat: controlador agregado
